# Parser-manager

./: .dockerignore  .gitignore  LICENSE  README.md  _test_all.py  docker-compose.yml  pyproject.toml  test_plan.md
.github/workflows/: ci.yml
docker/: Dockerfile
input/: .gitkeep
output/: .gitkeep
src/parser_manager/: __init__.py  __main__.py
src/parser_manager/api/: __init__.py  app.py  jobs.py  service.py
src/parser_manager/core/: __init__.py  base_parser.py  parser_factory.py
src/parser_manager/models/: __init__.py  exceptions.py  parsed_content.py
src/parser_manager/parsers/: __init__.py  html_parser.py
src/parser_manager/parsers/documents/: __init__.py  djvu_parser.py  doc_parser.py  docx_parser.py  pdf_parser.py
src/parser_manager/utils/: __init__.py  ast_builder.py  doc_stats.py  exporters.py  file_metrics.py  quality.py  semantic_json.py
tests/: conftest.py  test_placeholder.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/reporting/: __init__.py  qa_report.py  qa_report_template.md  qa_stats.py
tests/unit/: __init__.py  test_cli.py
tests/unit/api/: test_app.py  test_jobs.py  test_service.py
tests/unit/core/: test_base_parser.py  test_parser_factory.py
tests/unit/models/: test_exceptions.py  test_parsed_content.py
tests/unit/parsers/: test_djvu_parser.py  test_doc_parser.py  test_docx_parser.py  test_html_parser.py  test_pdf_parser.py
tests/unit/utils/: test_file_metrics.py  test_quality.py  test_semantic_json.py
