[project]
name = "parser-manager"
version = "0.0.0"
description = "Parser-manager"
readme = "README.md"
authors = [
    { name = "IvanEfremovW", email = "Ivan.EfremovWM@yandex.ru" }
]
requires-python = ">=3.12"
dependencies = [
    # HTML парсинг
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # Document парсинг
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=0.8.11",
    "oletools>=0.60",
    
    # Утилиты
    "chardet>=5.0.0",
    "python-magic>=0.4.27; sys_platform == 'linux'",
    "python-magic-bin>=0.4.14; sys_platform != 'linux'",
    
    # Логирование и валидация
    "loguru>=0.7.0",
    "pydantic>=2.0.0",

    # REST API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
parser-manager = "parser_manager:main"
parser-manager-api = "parser_manager.api:run_api"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "mypy>=1.0.0",
]
