[project]
name = "parser-manager"
version = "0.0.0"
description = "Parser-manager"
readme = "README.md"
authors = [
    { name = "IvanEfremovW", email = "Ivan.EfremovWM@yandex.ru" }
]
requires-python = ">=3.12"
dependencies = [
    # HTML парсинг
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # Document парсинг
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=0.8.11",
    "oletools>=0.60",
    
    # Утилиты
    "chardet>=5.0.0",
    "python-magic>=0.4.27; sys_platform == 'linux'",
    "python-magic-bin>=0.4.14; sys_platform != 'linux'",
    
    # Логирование и валидация
    "loguru>=0.7.0",
    "pydantic>=2.0.0",

    # REST API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.27.0",
]

[project.scripts]
parser-manager = "parser_manager:main"
parser-manager-api = "parser_manager.api:run_api"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=parser_manager",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "api: marks tests as API tests",
    "parser: marks tests as parser-specific tests",
    "requires_external: marks tests requiring external dependencies (antiword, djvutxt, etc.)",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["parser_manager"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/api/run.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
